@@ -45,7 +45,10 @@ class PostgresConnection(DBAPI):
             if usePygresql:
                 dsn_dict["host"] = "%s:%d" % (host, port)
             else:
-                dsn_dict["port"] = port
+                if psycopg.__version__.split('.')[0] == '1':
+                    dsn_dict["port"] = str(port)
+                else:
+                    dsn_dict["port"] = port
         if db:
             dsn_dict["database"] = db
         if user:
