@@ -15,6 +15,8 @@ Bug Fixes
 
 * Allow multiple MSSQL connections.
 
+* Psycopg1 requires port to be a string; psycopg2 requires port to be an int.
+
 SQLObject 0.7.2
 ===============
 
